--- a/views/about.ejs
+++ b/views/about.ejs
@@ -44,21 +44,6 @@
 
 
 
-        <!-- <section class="about-section">
-            <p>EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©
-            </p>
-            <article class="about-fig">
-               
-            </article>
-        </section> -->
-
-
-
-
-
-
-
-
 
         <section id="AboutSection">
             <h1>BASIC®</h1>
@@ -196,17 +181,28 @@
 
         <section id="AboutSection4">
             <div>
-                <h2>WEBBY AWARDS /40</h2>
-                <h2>ADWEEK /01</h2>
-                <h2>AWWWARDS /22</h2>
-                <h2>D&AD /01</h2>
-                <h2>ONE SHOW /03</h2>
-                <h2>THE FWA /07</h2>
+                <h2 id="head1">WEBBY AWARDS <span>/40 </span></h2>
+                <h2 id="head2">ADWEEK <span> /01</span></h2>
+                <h2 id="head3">AWWWARDS <span> /22 </span></h2>
+                <h2 id="head4">D&AD <span> /01 </span></h2>
+                <h2 id="head5">ONE SHOW <span> /03 </span></h2>
+                <h2 id="head6">THE FWA <span> /07 </span></h2>
             </div>
-            <div></div>
+
+            <div class="IMGES">
+                <img src="assets/img/WEBBY.jpg" alt="" id="WEBBYIMG">
+                <img src="assets/img/ADWEEKIMG.jpg" alt="" id="ADWEEKIMG">
+                <img src="assets/img/AWWWARDSIMG.jpg" alt="" id="AWWWARDSIMG">
+                <img src="assets/img/D&ADIMG.jpg" alt="" id="D&ADIMG">
+                <img src="assets/img/ONEIMG.jpg" alt="" id="ONEIMG">
+                <img src="assets/img/THEIMG.jpg" alt="" id="THEIMG">
+                
+
+            </div>
         </section>
-        <script src="assets/js/main.js"></script> 
     </main>
+
+    <script src="assets/js/main.js"></script> 
     
    
 
