--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,5 +76,5 @@
         </section>
     </section>
     </main>
-
+    <script src="assets/js/main.js"></script> 
     <%- include('./partials/footer') %>
