--- a/views/news.ejs
+++ b/views/news.ejs
@@ -23,6 +23,8 @@
         <% }) %>
     </article>
     </main>
+
+    <script src="assets/js/main.js"></script> 
     <%- include('./partials/footer') %>
 
 
