--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -98,7 +98,7 @@
             </div>
             </article>
     </section>
-
-
 </main>
+
+<script src="assets/js/main.js"></script> 
     <%- include('./partials/footer') %>
