--- a/views/work.ejs
+++ b/views/work.ejs
@@ -139,4 +139,6 @@
             </div> 
         </section>
     </main>
+
+    <script src="assets/js/main.js"></script> 
     <%- include('./partials/footer') %>
