--- a/views/partials/footer2.ejs
+++ b/views/partials/footer2.ejs
@@ -8,10 +8,10 @@
             </h3>
         </section>
         <section class="stay">
-            <div class="EmailFeld">
+            <div class="EmailFeld2">
                 <h3>● STAY IN THE KNOW</h3>
                 <p>Email Address</p>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email2">
             </div>
             <div>
                 <h2>● Social</h2>
