--- a/views/thinking.ejs
+++ b/views/thinking.ejs
@@ -31,7 +31,8 @@
             
         </div>
         <div class="right">
-            <img src="assets/img/arrow.svg" alt="" class="arrow">
+            <a href="#">  <img src="assets/img/arrow.svg" alt="" class="arrow">  </a> 
+             
         </div>
     </div>  
     <% }) %>
