--- a/views/work.ejs
+++ b/views/work.ejs
@@ -6,7 +6,7 @@
         </section>
 
         <section id="WorkSection">
-            <div class="one4">
+            <div class="BRANDED">
                 <ul>
                     <li>01/04</li>
                     <li>BRANDED ECOMMERCE</li>
@@ -14,8 +14,7 @@
                     <a href="#">Learne more</a>
                 </ul>
             </div>
-
-            <div class="einsFier">
+            <div class="Google">
                 <div class="vedio3">
                     <ul>
                         <li>
@@ -27,7 +26,9 @@
                 </div>
                 <div class="Beats">
                         <ul>
-                       <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                       <li>
+                           <img src='assets/img/beatsImg.jpg' alt=''>
+                        </li>
                         <li>Beats By Dre</li>
                         <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
                     </ul>
@@ -35,18 +36,8 @@
             </div>
         </section>
 
-
-
-
-
-
-
-
-
-
-
-        <section id="WorkSection">
-            <div class="zwei4">
+         <section id="WorkSection">
+            <div class="DIGITAL">
                 <ul>
                     <li>02/04</li>
                     <li>DIGITAL PRODUCTS + SERVICES</li>
@@ -55,20 +46,21 @@
                     <a href="#">Learne more</a>
                 </ul>
             </div>
-
-            <div class="zweiFier">
+            <div class="Fender">
                 <div class="PHOTOS">
                     <ul>
-                        <li>
+                        <li>.
                             <img src='assets/img/Fender.jpg' alt=''>
                         </li>
                         <li>Fender Academy</li>
                         <li>A WEB SERVICE TO MAKE SALES TRAINING FEEL LESS LIKE WORK AND MORE LIKE PLAY </li>
                     </ul>
                 </div>
-                <div class="BEA2">
+                <div class="American">
                         <ul>
-                        <li><img src='assets/img/americanE.jpg' alt=''></li>
+                        <li>
+                            <img src='assets/img/americanE.jpg' alt=''>
+                        </li>
                         <li>American Express</li>
                         <li>LAYING A DESIGN FOUNDATION FOR FUTURE PRODUCTS AND SERVICES WITH THE OPEN APP</li>
                     </ul>
@@ -76,9 +68,8 @@
             </div>
         </section>
 
-
         <section id="WorkSection">
-            <div class="drei4">
+            <div class="WEBSITES">
                 <ul>
                     <li>03/04</li>
                     <li>WEBSITES + PLATFORMS</li>
@@ -86,9 +77,8 @@
                     <a href="#">Learne more</a>
                 </ul>
             </div>
-
-            <div class="dreiFier">
-                <div class="PHOTOS">
+            <div class="Riot">
+                <div class="PHOTOS2">
                     <ul>
                         <li>
                             <img src='assets/img/Riot.jpg' alt=''>
@@ -97,9 +87,11 @@
                         <li>REVITALIZING THE RIOT GAMES BRAND WITH AN UPGRADED DIGITAL EXPERIENCE </li>
                     </ul>
                 </div>
-                <div class="BEA2">
+                <div class="SoftBank">
                         <ul>
-                        <li><img src='assets/img/softbankImg.jpg' alt=''></li>
+                        <li>
+                            <img src='assets/img/softbankImg.jpg' alt=''>
+                        </li>
                         <li>SoftBank Vision Fund</li>
                         <li>BUILDING A DIGITAL DESTINATION FOR THE LEADING TECH INVESTMENT FUND</li>
                     </ul>
@@ -107,10 +99,8 @@
             </div>
         </section>
 
-
-
         <section id="WorkSection">
-            <div class="fier4">
+            <div class="WEBSITES">
                 <ul>
                     <li>04/04</li>
                     <li>BRANDING + ADVERTISING</li>
@@ -119,19 +109,21 @@
                 </ul>
             </div>
 
-            <div class="fierFier">
+            <div class="Riot">
                 <div class="PHOTOS">
                     <ul>
                         <li>
-                            <img src='assets/img/nerd.jpg' alt=''>
+                            <img src='assets/img/nerd.jpg' alt="">
                         </li>
                         <li>NERD Skincare</li>
                         <li>DEVELOPING A BRAND THAT BROUGHT SCIENCE TO BEAUTY IN BOLD, UNEXPECTED WAYS </li>
                     </ul>
                 </div>
-                <div class="BEA2">
+                <div class="SoftBank">
                         <ul>
-                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                            <li>
+                                <img src='assets/img/brixon.jpg' alt=''>
+                            </li>
                         <li>Brixton</li>
                         <li>HONORING THE PAST TO BUILD THE FUTURE OF THE BRIXTON BRAND</li>
                     </ul>
@@ -142,3 +134,5 @@
 
     <script src="assets/js/main.js"></script> 
     <%- include('./partials/footer') %>
+
+    
