--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,10 +10,7 @@
                 <h1><span class="punkt4"></span> INTO COMPANY VALUE</h1>
                 <p>BASIC® is an independent branding & experience design company working at the intersection of culture, design, and technology. We value our craft, have a deep passion for progression, and exist to solve challenges for brands we believe in. Since the beginning, our mission has been to do great work and to have a great time doing it. We believe our mission has guided us well.</p>
             </div>
-
         </header>
-
-
 
         <section id="SectionImages">
             <article class="ArticleImages"> <p> EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©</p> </article>
@@ -41,12 +38,8 @@
             </article>
         </section>
 
-
-
-
-
         <section id="AboutSection">
-            <h1>BASIC®</h1>
+           <div><img src="assets/img/logo_pink.svg" alt=""> </div> 
 
             <div class="head4">
                 <h4>SEC.</h4>
@@ -95,7 +88,6 @@
             </article>
         </section>
 
-
         <section>
             <div class="head4">
                 <h4>SEC.</h4>
@@ -107,103 +99,96 @@
         <section id="AboutSection2">
                 <article class="CAPA">
                     <h1>CAPABILITIES</h1>
-            </article>
+                 </article>
 
-            <article class="STRA">
-                <div>
-                    <h1>STRATEGIC PLANNING</h1>
-                    <h2>Customer Experience</h2>
-                    <h2>Consumer Insights + Trends</h2>
-                    <h2>Omnichannel + D2C</h2>
-                    <h2>Product + Service Vision</h2>
-                    <h2>Go-To-Market Planning</h2>
-                    <h2>Data Science + Analytics</h2>
+                <article class="STRA">
+                     <div>
+                        <h1>STRATEGIC PLANNING</h1>
+                        <h2>Customer Experience</h2>
+                        <h2>Consumer Insights + Trends</h2>
+                         <h2>Omnichannel + D2C</h2>
+                        <h2>Product + Service Vision</h2>
+                        <h2>Go-To-Market Planning</h2>
+                        <h2>Data Science + Analytics</h2>
 
+                        <h1 class="BRAND">BRAND EXPERIENCE</h1>
+                        <h2>Identity + Positioning</h2>
+                        <h2>Visual Language + Art Direction</h2>
+                        <h2>Design Production + Execution</h2>
+                        <h2>Brand Messaging</h2>
+                        <h2>Brand Guidelines + Playbooks</h2>
+                        <h2>Campaign Development</h2>
 
-                    <h1 class="BRAND">BRAND EXPERIENCE</h1>
-                    <h2>Identity + Positioning</h2>
-                    <h2>Visual Language + Art Direction</h2>
-                    <h2>Design Production + Execution</h2>
-                    <h2>Brand Messaging</h2>
-                    <h2>Brand Guidelines + Playbooks</h2>
-                    <h2>Campaign Development</h2>
+                        <h1 class="BRAND">CONTENT CREATION</h1>
+                        <h2>Content Strategy</h2>
+                        <h2>Art Direction</h2>
+                        <h2>Photography</h2>
+                        <h2>Video Production</h2>
+                        <h2>3D / Motion Graphics</h2>
+                        <h2>Copywriting</h2>
+                    </div>
 
-                    <h1 class="BRAND">CONTENT CREATION</h1>
-                    <h2>Content Strategy</h2>
-                    <h2>Art Direction</h2>
-                    <h2>Photography</h2>
-                    <h2>Video Production</h2>
-                    <h2>3D / Motion Graphics</h2>
-                    <h2>Copywriting</h2>
+                    <div>
+                        <h1>USER EXPERIENCE</h1>
+                        <h2>Experience Strategy</h2>
+                        <h2>eCommerce + Websites</h2>
+                        <h2>Digital Product + Services</h2>
+                        <h2>Design Systems + Style Guides</h2>
+                        <h2>iOS + Android Applications</h2>
+                        <h2>Prototyping & Optimizatione</h2>
+
+                        <h1 class="BRAND">TECHNOLOGY</h1>
+                        <h2>Technical Discovery</h2>
+                        <h2>Technical Architecture</h2>
+                        <h2>Full-Stack Development</h2>
+                        <h2>CMS Implementation</h2>
+                        <h2>Quality Assurance</h2>
+                        <h2>Campaign Development</h2>
+                    </div>
+                </article>
+            </section>
+
+            <section>
+                <div class="head4">
+                     <h4>SEC.</h4>
+                     <h4>/C</h4>
+                     <h4></h4>
+                 </div>
+             </section>
+
+             <section id="AboutSection3">
+                <div class="awards">
+                     <h1>AWARDS</h1>
+                 </div>
+                <div class="While">
+                     <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
+                    <a href="/about">full awardslist</a>
+                 </div>
+             </section>
+
+            <section id="AboutSection4">
+                  <div>
+                    <h2 id="hover1">WEBBY AWARDS <span>/40 </span></h2>
+                    <h2 id="hover2">ADWEEK <span> /01</span></h2>
+                    <h2 id="hover3">AWWWARDS <span> /22 </span></h2>
+                    <h2 id="hover4">D&AD <span> /01 </span></h2>
+                    <h2 id="hover5">ONE SHOW <span> /03 </span></h2>
+                    <h2 id="hover6">THE FWA <span> /07 </span></h2>
                 </div>
 
-
-                <div>
-                    <h1>USER EXPERIENCE</h1>
-                    <h2>Experience Strategy</h2>
-                    <h2>eCommerce + Websites</h2>
-                    <h2>Digital Product + Services</h2>
-                    <h2>Design Systems + Style Guides</h2>
-                    <h2>iOS + Android Applications</h2>
-                    <h2>Prototyping & Optimizatione</h2>
-
-                    <h1 class="BRAND">TECHNOLOGY</h1>
-                    <h2>Technical Discovery</h2>
-                    <h2>Technical Architecture</h2>
-                    <h2>Full-Stack Development</h2>
-                    <h2>CMS Implementation</h2>
-                    <h2>Quality Assurance</h2>
-                    <h2>Campaign Development</h2>
+                <div class="IMGES">
+                    <img src="assets/img/WEBBY.jpg" alt="" id="WEBBYIMG">
+                    <img src="assets/img/ADWEEKIMG.jpg" alt="" id="ADWEEKIMG">
+                    <img src="assets/img/AWWWARDSIMG.jpg" alt="" id="AWWWARDSIMG">
+                    <img src="assets/img/D&ADIMG.jpg" alt="" id="D&ADIMG">
+                    <img src="assets/img/ONEIMG.jpg" alt="" id="ONEIMG">
+                    <img src="assets/img/THEIMG.jpg" alt="" id="THEIMG">
                 </div>
-            </article>
-        </section>
+            </section>
+        </main>
 
-
-        <section>
-            <div class="head4">
-                <h4>SEC.</h4>
-                <h4>/C</h4>
-                <h4></h4>
-            </div>
-        </section>
-
-
-        <section id="AboutSection3">
-            <div class="awards">
-                <h1>AWARDS</h1>
-            </div>
-            <div class="While">
-                <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
-                <a href="/about">full awardslist</a>
-            </div>
-        </section>
-
-
-        <section id="AboutSection4">
-            <div>
-                <h2 id="head1">WEBBY AWARDS <span>/40 </span></h2>
-                <h2 id="head2">ADWEEK <span> /01</span></h2>
-                <h2 id="head3">AWWWARDS <span> /22 </span></h2>
-                <h2 id="head4">D&AD <span> /01 </span></h2>
-                <h2 id="head5">ONE SHOW <span> /03 </span></h2>
-                <h2 id="head6">THE FWA <span> /07 </span></h2>
-            </div>
-
-            <div class="IMGES">
-                <img src="assets/img/WEBBY.jpg" alt="" id="WEBBYIMG">
-                <img src="assets/img/ADWEEKIMG.jpg" alt="" id="ADWEEKIMG">
-                <img src="assets/img/AWWWARDSIMG.jpg" alt="" id="AWWWARDSIMG">
-                <img src="assets/img/D&ADIMG.jpg" alt="" id="D&ADIMG">
-                <img src="assets/img/ONEIMG.jpg" alt="" id="ONEIMG">
-                <img src="assets/img/THEIMG.jpg" alt="" id="THEIMG">
-                
-
-            </div>
-        </section>
-    </main>
-
-    <script src="assets/js/main.js"></script> 
+            <script src="assets/js/main.js"></script> 
     
    
 
-    <%- include('./partials/footer2') %>
+             <%- include('./partials/footer2') %>
