--- a/views/partials/nav2.ejs
+++ b/views/partials/nav2.ejs
@@ -1,7 +1,7 @@
 <nav id="navbar2">
     <a class="navLogo" href="/">
         <img src="assets/img/logo_pink.svg" alt="logo"></a>
-    <ul class="navItem">
+    <ul class="navItem2">
         <% nav.forEach(NavItem=> { %>
             <li><a href=<%=NavItem.url %> > <%=NavItem.name %> </a></li>
             <%})%>
