--- a/views/work.ejs
+++ b/views/work.ejs
@@ -100,7 +100,7 @@
         </section>
 
         <section id="WorkSection">
-            <div class="WEBSITES">
+            <div class="BRANDING4">
                 <ul>
                     <li>04/04</li>
                     <li>BRANDING + ADVERTISING</li>
@@ -109,8 +109,8 @@
                 </ul>
             </div>
 
-            <div class="Riot">
-                <div class="PHOTOS">
+            <div class="NERD">
+                <div class="PHOTOS3">
                     <ul>
                         <li>
                             <img src='assets/img/nerd.jpg' alt="">
@@ -119,7 +119,7 @@
                         <li>DEVELOPING A BRAND THAT BROUGHT SCIENCE TO BEAUTY IN BOLD, UNEXPECTED WAYS </li>
                     </ul>
                 </div>
-                <div class="SoftBank">
+                <div class="Brixton">
                         <ul>
                             <li>
                                 <img src='assets/img/brixon.jpg' alt=''>
