--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,4 @@
-
-    <%- include('./partials/header2') %>
-
+<%- include('./partials/header2') %>
     <main id="AboutMain">
         <header id="AboutHeader">
             <div class="WE">
@@ -167,28 +165,34 @@
              </section>
 
             <section id="AboutSection4">
+                <article>
+                  <div >
+                        <h2 id="hover1">WEBBY AWARDS <span>/40 </span></h2>
+                        <img src="assets/img/WEBBY.jpg" alt="">
+                  </div>
                   <div>
-                    <h2 id="hover1">WEBBY AWARDS <span>/40 </span></h2>
-                    <h2 id="hover2">ADWEEK <span> /01</span></h2>
-                    <h2 id="hover3">AWWWARDS <span> /22 </span></h2>
-                    <h2 id="hover4">D&AD <span> /01 </span></h2>
-                    <h2 id="hover5">ONE SHOW <span> /03 </span></h2>
-                    <h2 id="hover6">THE FWA <span> /07 </span></h2>
-                </div>
-
-                <div class="IMGES">
-                    <img src="assets/img/WEBBY.jpg" alt="" id="WEBBYIMG">
-                    <img src="assets/img/ADWEEKIMG.jpg" alt="" id="ADWEEKIMG">
-                    <img src="assets/img/AWWWARDSIMG.jpg" alt="" id="AWWWARDSIMG">
-                    <img src="assets/img/D&ADIMG.jpg" alt="" id="D&ADIMG">
-                    <img src="assets/img/ONEIMG.jpg" alt="" id="ONEIMG">
-                    <img src="assets/img/THEIMG.jpg" alt="" id="THEIMG">
-                </div>
+                         <h2 id="hover2">ADWEEK <span> /01</span></h2>
+                        <img src="assets/img/ADWKING.jpg" alt="">
+                  </div>
+                  <div>
+                        <h2 id="hover3">AWWWARDS <span> /22 </span></h2>
+                        <img src="assets/img/AWWWARDSIMG.jpg" alt="">
+                  </div>
+                  <div>
+                        <h2 id="hover4">D&AD <span> /01 </span></h2>
+                        <img src="assets/img/D&ADIMG.jpg" alt="">
+                  </div>
+                  <div>
+                         <h2 id="hover5">ONE SHOW <span> /03 </span></h2>
+                        <img src="assets/img/ONEIMG.jpg" alt="">
+                  </div>
+                  <div>
+                         <h2 id="hover6">THE FWA <span> /07 </span></h2> 
+                         <img src="assets/img/THEIMG.jpg" alt="">
+                  </div>
+                </article>
+                </div> 
             </section>
         </main>
-
-            <script src="assets/js/main.js"></script> 
-    
-   
-
-             <%- include('./partials/footer2') %>
+     <%- include('./partials/footer2') %>
+    <script src="assets/js/main.js"></script> 
