--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -57,8 +57,6 @@
                 </div>
                 <div class="sandiego">BAY AREA</div>
             </div>
-
-
             <div class="SA">
                 <div class="SAN">
                     <img src='assets/img/stL.jpg' alt="">
@@ -66,8 +64,6 @@
                 </div>
                 <div class="sandiego">ST. LOUIS</div>
             </div>
-
-
             </article>
         </section>
     </section>
@@ -94,7 +90,7 @@
             <div class="EmailFeld">
                 <h3>STAY IN THE KNOW</h3>
                 <p>Email Address</p>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email2">
             </div>
             </article>
     </section>
