--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -59,7 +59,7 @@
             </div>
             <div class="SA">
                 <div class="SAN">
-                    <img src='assets/img/stL.jpg' alt="">
+                    <img src='assets/img/stl.jpg' alt="">
                     <h3>03  <span>/03</span></h3>
                 </div>
                 <div class="sandiego">ST. LOUIS</div>
